[Y-Build-Tests] Simplify and unify job definitions
- Simplify environment variable definitions and tool handling
- Remove unnecessary print-outs and whitespace
- Remove unused or unnecessary parameters and property definitions

Part of https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/issues/2625